# sigpro-backend

./: .env.example  .gitignore  Dockerfile  data.json  db.sqlite3  main.py  manage.py  pyproject.toml  requirements.txt  test.py  treatexcel.ipynb
core/: admin.py  forms.py  middlewares.py  models.py  ptba.json  redis_service.py  services.py  views.py  views.py~
core/migrations/: 0001_initial.py  0002_alter_user_departement.py  0003_role_user_role.py  0004_exercice.py  0005_exercice_file.py  0006_alter_exercice_file_alter_exercice_label.py
data/: ptba_programme_remake.xlsx  test.json
medias/rapports/: 2.PRSEP__Suivi_des_ILD_01112023.doc  3_5kMb78o.PRSEP__Suivi_des_ILD_14022024.doc
medias/tdr/: 1_UWrKQog_7JsvDX6_ckcbJWd.PRSEP__Suivi_des_ILD_020820231.doc  2.PRSEP__rapport_semestriel_juin_2024_VF14082024.docx
planification/: admin.py  apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
planification/migrations/: 0001_initial.py  0002_ppm_ild_souscomposant_and_more.py  0003_activite_cout_tache_cout_and_more.py  0004_remove_ild_souscomposant.py  0005_categoriedepense_ild_type_indicateur_alter_rld_ild.py  (+24 more)
programme/: admin.py  models.py  urls.py  views.py
prsep/: asgi.py  urls.py  wsgi.py
rapportage/: admin.py  apps.py  forms.py  models.py  models.py~  urls.py  views.py  views.py~
setting/: forms.py  models.py  urls.py  views.py
suivi/: admin.py  admin.py~  apps.py  comsumer.py  forms.py  models.py  signals.py  urls.py  views.py
templates/: analyse.html  base.html  carto.html  create_user.html  home.html  home_stats.html
(+100 files in other folders)
